# At_Your_Service_Discord_Bot

./: .env.example  .gitignore  README.en.md  README.md  bot.py  pyproject.toml  ts.py
discord_plugin_platform/: .gitignore  README.md  pyproject.toml
discord_plugin_platform/.github/workflows/: ci.yml
discord_plugin_platform/bot_integration/: admin_console.py  listeners.py
discord_plugin_platform/core/: bot_registry.py  capability_api.py  capability_errors.py  database.py  dispatcher.py  manifest.py  message_cache.py  plugin_storage_repository.py  quota.py  repository.py  suspension.py
discord_plugin_platform/plugins_examples/: README.md
discord_plugin_platform/plugins_examples/temp_role_punishment/: manifest.json  temp_role_punishment.lua
discord_plugin_platform/sandbox/: capability_bindings.py  engine.py  rpc_server.py  worker.py
discord_plugin_platform/tests/: conftest.py
discord_plugin_platform/tests/bot_integration/: test_admin_console.py  test_listeners.py
discord_plugin_platform/tests/core/: test_capability_api_run_coroutine_sync.py  test_database.py  test_dispatcher.py  test_dispatcher_execute_actions.py  test_dispatcher_storage_rollback.py  test_fault_injection_dispatcher_db.py  test_fault_injection_execute_actions_discord_errors.py  test_manifest.py  test_message_cache.py  test_plugin_examples.py  test_plugin_storage_repository.py  test_quota.py  test_repository.py
discord_plugin_platform/tests/integration/: _fakes.py  test_end_to_end_message_flow.py  test_end_to_end_rejection_paths.py  test_end_to_end_storage_and_schedule.py
discord_plugin_platform/tests/sandbox/: test_capability_bindings.py  test_escape_attempts.py  (+7 more)
(+73 files in other folders)
