[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot-discord-bot"
version = "0.1.0"
description = "Multifunctional Discord moderation and automation bot"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiosqlite>=0.20,<1",
    "aiohttp>=3.9,<4",
    "discord.py>=2.4,<3",
    "groq>=0.11,<1",
    "python-dotenv>=1.0,<2",
    "pytz>=2024.1",
    "Pillow>=10,<12",
    "imagehash>=4.3,<5",
    "pyzbar>=0.1.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.6,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["admin*", "core*", "features*", "hubs*"]
