[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-plugin-platform"
version = "0.1.0"
description = "Discord Bot 外掛市集平台"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiosqlite>=0.20,<1",
    "discord.py>=2.4,<3",
    "lupa>=2.1,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "pydantic>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.6,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
